--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,31 +69,11 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  fonts:
-    - family: WorkSans
-      fonts:
-        - asset: fonts/WorkSans-Black.ttf
-        - asset: fonts/WorkSans-Bold.ttf
-        - asset: fonts/WorkSans-ExtraBold.ttf
-        - asset: fonts/WorkSans-ExtraLight.ttf
-        - asset: fonts/WorkSans-ExtraLightItalic.ttf
-          style: italic
-        - asset: fonts/WorkSans-Italic.ttf
-          style: italic
-        - asset: fonts/WorkSans-Light.ttf
-        - asset: fonts/WorkSans-LightItalic.ttf
-          style: italic
-        - asset: fonts/WorkSans-Medium.ttf
-        - asset: fonts/WorkSans-MediumItalic.ttf
-          style: italic
-        - asset: fonts/WorkSans-Regular.ttf
-        - asset: fonts/WorkSans-SemiBold.ttf
-        - asset: fonts/WorkSans-SemiBoldItalic.ttf
-          style: italic
-        - asset: fonts/WorkSans-Thin.ttf
-        - asset: fonts/WorkSans-ThinItalic.ttf
-          style: italic
-
+  # fonts:
+  #   - family: Schyler
+  #     fonts:
+  #       - asset: fonts/Schyler-Regular.ttf
+  #       - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
