--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,12 @@ dev_dependencies:
   flutter_lints: ^1.0.4
   flutter_linkify: ^5.0.2
   url_launcher: ^6.0.20
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon/icon.png"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -57,7 +63,6 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/brad-pic.jpg
     - assets/compass_icon.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
