--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,8 @@ dependencies:
     sdk: flutter
   http: ^0.13.4
   flutter_search_bar: ^2.1.0
+  sensors_plus: ^1.3.0
+  url_launcher: ^6.0.20
 
 dev_dependencies:
   flutter_test:
@@ -43,7 +45,6 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.4
   flutter_linkify: ^5.0.2
-  url_launcher: ^6.0.20
   flutter_launcher_icons: ^0.9.2
 
 flutter_icons:
